fix modal overlap

--- a/src/_component/question/question.sass
+++ b/src/_component/question/question.sass
@@ -7,7 +7,7 @@
   flex-direction: column
   justify-content: center
   padding: 2rem
-  background-color: rgba(0, 0, 0, 0.8)
+  background-color: rgba(0, 0, 0, 1)
   position: fixed
   top: 0
   left: 0
